Revision history for Database-Abstraction

0.17
	Support expires_in for compatability with CHI
	Added cache support to AUTOLOAD
	Allow the logger to be a filename
	When the logger is a reference to code, give more information

0.16	Sun Jan 12 12:15:01 EST 2025
	fetchrow_hashref() - when no_entry is not set allow just one argument to be given: the entry value

0.15	Thu Jan  9 19:43:43 EST 2025
	Improved handling of empty values in slurp mode
	AUTOLOAD: error on invalid column name in slurp mode

0.14	Fri Jan  3 11:17:11 EST 2025
	Added the dbname argument

0.13	Sun Dec 22 13:30:13 EST 2024
	Refactor logger helper routines
	Fix "Bad table or column name: 'entryIS NOT NULL' has chars not alphanumeric or underscore"
	Added t/30-basics.t

0.12	Wed Dec  4 08:19:09 EST 2024
	Move the synopsis document around for clarity
	Allow the logger to be a ref to code

0.11	Thu Nov  7 10:44:24 EST 2024
	Added id parameter
	Slurp small XML files using XML::Simple
	Fix uninitialised error when slurp_file doesn't exist
	Use features of File::pfopen version 0.03

0.10	Thu Sep 19 08:17:55 EDT 2024
	Added t/init.t
	The constructor now honours 'sep_char'
	Test no_entry files
	Added CircleCI and Codecov

0.09	Mon Jun 24 20:42:48 EDT 2024
	Added t/chi.t
	selectall_hash: speed up slurp mode when 'entry' is one of the parameters
	execute: add the table name to the query

0.08	Mon May 20 08:43:08 EDT 2024
	Add unique as a synonym for distinct
	Allow max_slurp_size to be tweaked
	Fix CSV search on a column other than the keyed column
	Added t/error.t
	Catch undefined arguments in fetchrow_hashref

0.07	Fri Feb 23 08:02:24 EST 2024
	selectall_hash: Fixed "Not an ARRAY reference"

0.06	Tue Feb 20 16:55:33 EST 2024
	Slurped data - improve keying
	fetchrow_hashref now uses slurped data on some optimised places
	fetchrow_hashref: fixed uninitialized variable in logger
	fetchrow_hashref: more verbose debugging on match
	AUTOLOAD: usage error if entry isn't a column